--- a/src/output.css
+++ b/src/output.css
@@ -588,10 +588,6 @@ video {
   }
 }
 
-.relative {
-  position: relative;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -600,16 +596,24 @@ video {
   top: 0px;
 }
 
-.m-4 {
-  margin: 1rem;
+.z-50 {
+  z-index: 50;
 }
 
 .m-2 {
   margin: 0.5rem;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .m-5 {
   margin: 1.25rem;
+}
+
+.m-20 {
+  margin: 5rem;
 }
 
 .mx-auto {
@@ -617,12 +621,20 @@ video {
   margin-right: auto;
 }
 
-.mt-11 {
-  margin-top: 2.75rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
 }
 
 .mt-2 {
@@ -637,124 +649,12 @@ video {
   margin-top: 2.25rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.-mt-8 {
-  margin-top: -2rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.ml-9 {
-  margin-left: 2.25rem;
-}
-
-.ml-96 {
-  margin-left: 24rem;
-}
-
-.-ml-96 {
-  margin-left: -24rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.ml-80 {
-  margin-left: 20rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-72 {
-  margin-left: 18rem;
-}
-
-.ml-11 {
-  margin-left: 2.75rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.ml-40 {
-  margin-left: 10rem;
-}
-
-.mb-44 {
-  margin-bottom: 11rem;
-}
-
-.mt-44 {
-  margin-top: 11rem;
-}
-
-.mt-96 {
-  margin-top: 24rem;
-}
-
-.mt-80 {
-  margin-top: 20rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.mr-14 {
-  margin-right: 3.5rem;
-}
-
-.mr-24 {
-  margin-right: 6rem;
-}
-
-.mr-60 {
-  margin-right: 15rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .flex {
@@ -769,52 +669,48 @@ video {
   display: grid;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
 .h-10 {
   height: 2.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-40 {
   height: 10rem;
 }
 
-.h-4 {
-  height: 1rem;
+.h-80 {
+  height: 20rem;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-auto {
+  height: auto;
 }
 
-.h-7 {
-  height: 1.75rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-72 {
-  height: 18rem;
+.h-1\/2 {
+  height: 50%;
 }
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
+}
+
+.w-9\/12 {
+  width: 75%;
 }
 
 .w-96 {
@@ -825,105 +721,48 @@ video {
   width: 100%;
 }
 
-.w-60 {
-  width: 15rem;
+.w-3\/4 {
+  width: 75%;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-16 {
-  width: 4rem;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-1 {
   width: 0.25rem;
 }
 
-.w-80 {
-  width: 20rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-72 {
-  width: 18rem;
+.w-auto {
+  width: auto;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.rotate-1 {
-  --tw-rotate: 1deg;
+.scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-pointer {
-  cursor: pointer;
+.scale-50 {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scroll-ml-10 {
-  scroll-margin-left: 2.5rem;
-}
-
-.scroll-ml-80 {
-  scroll-margin-left: 20rem;
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.place-content-center {
-  place-content: center;
 }
 
 .content-center {
@@ -932,10 +771,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -950,12 +785,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-2xl {
@@ -966,8 +805,8 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border {
@@ -976,10 +815,6 @@ video {
 
 .border-4 {
   border-width: 4px;
-}
-
-.border-dashed {
-  border-style: dashed;
 }
 
 .border-dotted {
@@ -996,14 +831,14 @@ video {
   background-color: rgb(128 0 128 / var(--tw-bg-opacity, 1));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
 .bg-liv {
   --tw-bg-opacity: 1;
   background-color: rgb(207 159 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-bagc {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 195 227 / var(--tw-bg-opacity, 1));
 }
 
 .bg-text {
@@ -1014,6 +849,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -1028,28 +867,36 @@ video {
   padding: 1.5rem;
 }
 
-.p-7 {
-  padding: 1.75rem;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
-.p-44 {
-  padding: 11rem;
+.pl-4 {
+  padding-left: 1rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pt-3 {
   padding-top: 0.75rem;
 }
 
-.text-left {
-  text-align: left;
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-center {
@@ -1067,6 +914,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-lg {
@@ -1101,19 +953,39 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-.backdrop\:blur::backdrop {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .backdrop\:filter::backdrop {
@@ -1124,25 +996,26 @@ video {
   bottom: 0px;
 }
 
-.hover\:bg-text:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+.hover\:translate-x-1:hover {
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:bg-bag:hover {
+.hover\:bg-liv:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(128 0 128 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:text-bag:hover {
-  --tw-text-opacity: 1;
-  color: rgb(128 0 128 / var(--tw-text-opacity, 1));
+  background-color: rgb(207 159 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:shadow-2xl:hover {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:transition-opacity:hover {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 @media (min-width: 640px) {
@@ -1165,12 +1038,16 @@ video {
     margin-top: 1rem;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:h-96 {
     height: 24rem;
   }
 
-  .md\:h-80 {
-    height: 20rem;
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:w-2\/4 {
@@ -1181,16 +1058,16 @@ video {
     width: 75%;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:p-0 {
+    padding: 0px;
   }
 
   .md\:p-10 {
@@ -1202,14 +1079,8 @@ video {
     line-height: 2.25rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
